--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video-transcoder",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.21",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -33,6 +34,7 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "regenerator-runtime": "^0.14.0"
   }
 }
